Session one updates.

--- a/halesLanding/theWarrens/godsRest/The Last Temple of Lathander The Good/theLastTempleOfLathanderTheGood.tex
+++ b/halesLanding/theWarrens/godsRest/The Last Temple of Lathander The Good/theLastTempleOfLathanderTheGood.tex
@@ -82,7 +82,10 @@
 
 \item[Awakened Ria]
 
-A recent addition to the ranks of Lathander's flock, Ria has come to command a great deal of respect from her colleagues.  
+A recent addition to the ranks of Lathander's flock, Ria has come to command a great deal of respect from her colleagues.
+
+\item[Attendants of the Temple]
+Hilde (brusque, long blond hair), Ral (gregarious smile), and Ciara (shy, pixie cut).  
 
 \end{description}
 
@@ -95,6 +98,10 @@ A recent addition to the ranks of Lathander's flock, Ria has come to command a g
 \item{Abandoned Temple of Kelemvor (and Dungeon Beneath}
 
 \end{itemize}
+
+\item{Player Interactions: }
+
+Sage, Snart, and Althaea were contracted by Gili, a pockmarked thief based out of the Stones' Bones, to investigate the happenings around the Gods' Rest district. They encountered a zombie bursting forth from the halls of the Temple of Lathander, the Morninglord. Upon investigation, they discovered a trap door beneath Awakened Cor's study. Inside, they found a symbol of Lathander, covered in blood, and were attacked by a spectre. They defeated it, with Snart and Althaea grievously injured, due to some quick thinking from Sage. 
 
 \end{description}
 
