Updates re: Lathander's Priests.

--- a/halesLanding/theWarrens/godsRest/The Last Temple of Lathander The Good/theLastTempleOfLathanderTheGood.tex
+++ b/halesLanding/theWarrens/godsRest/The Last Temple of Lathander The Good/theLastTempleOfLathanderTheGood.tex
@@ -67,7 +67,7 @@
 
 \begin{description}
 
-\item[Hooks:] 
+\item[Hooks:]
 
 \begin{itemize}
 
@@ -78,14 +78,18 @@
 \item[NPCs:]
 \begin{description}
 
-\item[Awakened Cor] This priest of Lathander is one of the few priests of the Morninglord that still wields some divine power.  It turns out, however, that that power is drawn from a darker place, as she was in fact the one who raised the zombie. She is part of a group that has corrupted Kelemvor's temple for the purpose of waking the undead, as an effort to rise up against noble rule. 
+\item[Awakened Cor] This priest of Lathander is one of the few priests of the Morninglord that still wields some divine power.  It turns out, however, that that power is drawn from a darker place, as she was in fact the one who raised the zombie. She is part of a group that has corrupted Kelemvor's temple for the purpose of waking the undead, as an effort to rise up against noble rule.
 
 \item[Awakened Ria]
 
-A recent addition to the ranks of Lathander's flock, Ria has come to command a great deal of respect from her colleagues.
+A recent addition to the ranks of Lathander's flock, Ria has come to command a great deal of respect from her colleagues. Will be made full Dawnbringer with the ascension of her powers [S2].
+
+\item[Dawnlord Gawain]
+
+Former leader of the Hale's Landing temple of Lathander. Left to answer the call of his God.
 
 \item[Attendants of the Temple]
-Hilde (brusque, long blond hair), Ral (gregarious smile), and Ciara (shy, pixie cut).  
+Hilde (brusque, long blond hair), Ral (gregarious smile), and Ciara (shy, pixie cut).
 
 \end{description}
 
@@ -100,8 +104,16 @@ Hilde (brusque, long blond hair), Ral (gregarious smile), and Ciara (shy, pixie 
 \end{itemize}
 
 \item{Player Interactions: }
+\begin{description}
+\item[Session 1:] {
+Sage, Snart, and Althaea were contracted by Gili, a pockmarked thief based out of the Stones' Bones, to investigate the happenings around the Gods' Rest district. They encountered a zombie bursting forth from the halls of the Temple of Lathander, the Morninglord. Upon investigation, they discovered a trap door beneath Awakened Cor's study. Inside, they found a symbol of Lathander, covered in blood, and were attacked by a spectre. They defeated it, with Snart and Althaea grievously injured, due to some quick thinking from Sage.
+}
 
-Sage, Snart, and Althaea were contracted by Gili, a pockmarked thief based out of the Stones' Bones, to investigate the happenings around the Gods' Rest district. They encountered a zombie bursting forth from the halls of the Temple of Lathander, the Morninglord. Upon investigation, they discovered a trap door beneath Awakened Cor's study. Inside, they found a symbol of Lathander, covered in blood, and were attacked by a spectre. They defeated it, with Snart and Althaea grievously injured, due to some quick thinking from Sage. 
+\item[Session 2:]{
+  Took Oliver, the 18-20 yo Scalper from the Gods' Rest district of the Rats' Nest, to the temple of Lathander. Need 10 - 3 gold to get him in as an apprentice. Heard (briefly) about Gawain. Ate rabbit stew. Cor is dead, pushed from the Sapphire Promenade in the Skyside district of Glasspeak by Docksmaster Ellamin Highhold. Went to investigate Cor's body at the west Gods' Rest guardpost.
+}
+
+\end{description}
 
 \end{description}
 
