Updates re: interactions with Grub.

--- a/halesLanding/theWarrens/theRatsNest/grubAndMusic/grubAndMusic.tex
+++ b/halesLanding/theWarrens/theRatsNest/grubAndMusic/grubAndMusic.tex
@@ -111,6 +111,14 @@ The Night's Face is a well-known guild of assassins. The have guildhouses in mos
 
 \end{itemize}
 
+\item{Player Interactions:}
+
+\begin{description}
+
+\item[Session 2: ] {Grub began to open up a little bit to Sage, who is a bit like a daughter to him. Same anger, same rashness. Doesn't want to lose her too.}
+
+\end{description}
+
 \end{description}
 
 \end{document}
